# ODR-example

./: .gitignore  Installation_Guide.md  LICENSE  ODR-marimo.py  README.md  data.csv  data.xlsx  data_1.csv  fit-notebook.ipynb  fit-notebook.py  fit_results.txt  generate_fake_data.py  marimo-tips.md  odr-analysis.py  odr-fit-marimo.py  odr-fit-typed.py  odr-fit.ipynb  odr-fit.py  pyproject.toml  requirements.txt  test_simple_marimo.py
backup/: fit_results.txt
