[tool.ruff]
# Enable specific rule sets
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "D",  # pydocstring
    "UP", # pyupgrade
    "N",  # pep8-naming
]

# Avoid rules that encourage OOP patterns
lint.ignore = [
    "N805",  # first argument of a method should be named 'self'
    "N806",  # variable in function should be lowercase
    "ARG001" # Ignore unused parameter warning
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pdm]
distribution = false

[project]
name = "ODR-example"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Hezy Amiel", email = "hezy.amiel@gmail.com"},
]
dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.55.0",
    "kiwisolver==1.4.7",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandas-stubs==2.2.3.241126",
    "pillow==11.0.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "scipy==1.14.1",
    "six==1.16.0",
    "types-pytz==2024.2.0.20241003",
    "tzdata==2024.2",
    "matplotlib==3.6.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
