[project]
name = "odr-example"
description = "Orthogonal Distance Regression examples"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "marimo>=0.16.0",
]

[project.optional-dependencies]
dev = ["pandas-stubs", "types-pytz"]

[tool.ruff]
# Enable specific rule sets
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "D",  # pydocstring
    "UP", # pyupgrade
    "N",  # pep8-naming
]

# Avoid rules that encourage OOP patterns
lint.ignore = [
    "N805",  # first argument of a method should be named 'self'
    "N806",  # variable in function should be lowercase
    "ARG001" # Ignore unused parameter warning
]

[tool.pyright]
typeCheckingMode = "basic"
